@@ -1,5 +1,7 @@
 Changes to Version 1.9-6
 
+  o Calls to deprecated functions .find.package() and .path.package() replaced by find.package() and path.package() (suggestion of Brian Ripley).
+
   o Small fixes.
 
 Changes to Version 1.9-5
